--- a/index.html
+++ b/index.html
@@ -594,5 +594,8 @@
 
         navSlide();
     </script>
+    <div style="display:none">
+        <script defer data-domain="sprunkiincredibox.com" src="https://click.pageview.click/js/script.js"></script>
+    </div>
 </body>
 </html>
