--- a/index.html
+++ b/index.html
@@ -569,6 +569,9 @@
         <div class="container">
             <p>&copy; 2024 SprunkiIncredibox.com. All rights reserved. Embrace the Sprunki spirit!</p>
         </div>
+        <div class="container">
+            <p><a href="https://github.com/qiayue/SprunkiIncredibox">Sprunki Incredibox Github</a></p>
+        </div>
     </footer>
 
     <script>
