--- a/index.html
+++ b/index.html
@@ -340,9 +340,10 @@
 
     <section class="hero">
         <div class="hero-content container">
-            <h1>Welcome to Sprunki Incredibox</h1>
+            <h1>Free Sprunki Incredibox Game</h1>
+            <h2>Welcome to <a href="https://sprunkiincredibox.com/">SprunkiIncredibox.com</a></h2>
             <p>Create, mix, and groove with the spunkiest beats around!</p>
-            <p>SprunkiIncredibox.com</p>
+            <p></p>
             <a href="#play-now" class="cta-button">Start Mixing Now</a>
         </div>
     </section>
