--- a/index.html
+++ b/index.html
@@ -341,9 +341,8 @@
     <section class="hero">
         <div class="hero-content container">
             <h1>Free Sprunki Incredibox Game</h1>
-            <h2>Welcome to <a href="https://sprunkiincredibox.com/">SprunkiIncredibox.com</a></h2>
+            <h2 style="color:white;">Welcome to <a href="https://sprunkiincredibox.com/"  style="color:white;">SprunkiIncredibox.com</a></h2>
             <p>Create, mix, and groove with the spunkiest beats around!</p>
-            <p></p>
             <a href="#play-now" class="cta-button">Start Mixing Now</a>
         </div>
     </section>
