--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
             <p>&copy; 2024 SprunkiIncredibox.com. All rights reserved. Embrace the Sprunki spirit!</p>
         </div>
         <div class="container">
-            <p><a href="https://github.com/qiayue/SprunkiIncredibox">Sprunki Incredibox Github</a></p>
+            <p><a href="https://github.com/qiayue/SprunkiIncredibox" style="color:white;">Sprunki Incredibox Github</a></p>
         </div>
     </footer>
 
