--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         <div class="container">
             <h2>Play Sprunki Incredibox Now</h2>
             <div class="game-container">
-                <iframe src="https://html-classic.itch.zone/html/11407110/index.html" frameborder="0" width="100%" height="600px"></iframe>
+                <iframe src="./game/" frameborder="0" width="100%" height="600px"></iframe>
             </div>
         </div>
     </section>
