--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         .hero {
-            background: url('./img/home-header2.jpg') no-repeat center center/cover;
+            background: url('./img/bg01.png') no-repeat center center/cover;
             height: 80vh;
             display: flex;
             align-items: center;
@@ -424,7 +424,7 @@
         <div class="container">
             <h2>Play Sprunki Incredibox Now</h2>
             <div class="game-container">
-                <iframe src="./game/" frameborder="0" width="100%" height="600px"></iframe>
+                <iframe src="./game/" frameborder="0" width="100%" height="800px"></iframe>
             </div>
         </div>
     </section>
