--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/img/icon/favicon-16x16.png">
     <link rel="icon" href="/favicon.ico"/>
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="canonical" href="https://SprunkiIncredibox.com/"/>
+    <link rel="canonical" href="https://sprunkiincredibox.com/"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         :root {
