--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
                     <a href="#"><i class="fas fa-music"></i> SprunkiIncredibox.com</a>
                 </div>
                 <ul class="nav-links">
+                    <li><a href="https://sunoai.ai/welcome/sprunkiw"><i class="fas fa-music"></i> AI Music</a></li>
                     <li><a href="#play-now"><i class="fas fa-play"></i> Play Now</a></li>
                     <li><a href="#about"><i class="fas fa-info-circle"></i> About</a></li>
                     <li><a href="#features"><i class="fas fa-star"></i> Features</a></li>
