--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
             <h2 style="color:white;">Welcome to <a href="https://sprunkiincredibox.com/"  style="color:white;">SprunkiIncredibox.com</a></h2>
             <p>Create, mix, and groove with the spunkiest beats around!</p>
             <a href="#play-now" class="cta-button">Start Mixing Now</a>
+            <a href="https://sunoai.ai/welcome/sprunki" class="cta-button">Create AI Music Free Now</a>
         </div>
     </section>
 
