--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@
             transform: rotate(45deg) translate(-5px,-6px);
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1522458956946675"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
