--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SprunkiIncredibox.com: Sprunki Incredibox - Create Your Own Sprunky Beats!</title>
-    <meta name="description" content="Dive into the world of Sprunki Incredibox! Mix, match, and create unique beats with our quirky characters. Experience music creation like never before.">
+    <title>Sprunki Incredibox - Create Your Own Sprunky Beats! | SprunkiIncredibox.com</title>
+    <meta name="description" content="Dive into the world of Sprunki Incredibox! Mix, match, and create unique Sprunky beats with our quirky characters. Experience music creation like never before.">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/icon/favicon-16x16.png">
@@ -44,7 +44,7 @@
         }
         .hero {
             background: url('./img/bg01.png') no-repeat center center/cover;
-            height: 80vh;
+            height: 60vh;
             display: flex;
             align-items: center;
             text-align: center;
@@ -344,10 +344,19 @@
     <section class="hero">
         <div class="hero-content container">
             <h1>Free Sprunki Incredibox Game</h1>
-            <h2 style="color:white;">Welcome to <a href="https://sprunkiincredibox.com/"  style="color:white;">SprunkiIncredibox.com</a></h2>
+            <h2 style="color:white;">Welcome to <a href="https://sprunkiincredibox.com/"  style="color:white;">SprunkiIncredibox.com</a> Play Sprunky Music Game</h2>
             <p>Create, mix, and groove with the spunkiest beats around!</p>
-            <a href="#play-now" class="cta-button">Start Mixing Now</a>
-            <a href="https://sunoai.ai/welcome/sprunki" class="cta-button">Create AI Music Free Now</a>
+            <a href="#play-now" class="cta-button"><i class="fas fa-play"></i> Play Sprunki Now</a>
+            <a href="https://sunoai.ai/welcome/sprunki" class="cta-button"><i class="fas fa-music"></i> Create AI Music Free Now</a>
+        </div>
+    </section>
+
+    <section id="play-now" class="play-area">
+        <div class="container">
+            <h2>Play Sprunki Incredibox Now</h2>
+            <div class="game-container">
+                <iframe src="./game/" frameborder="0" width="100%" height="800px"></iframe>
+            </div>
         </div>
     </section>
 
@@ -417,19 +426,10 @@
 
     <section class="sprunki-history">
         <div class="container">
-            <h2>The Sprunky Saga: How Sprunki Incredibox Came to Be</h2>
+            <h2 style="color: white;text-align: left;">The Sprunky Saga: How Sprunki Incredibox Came to Be</h2>
             <p>The tale of Sprunki Incredibox is as wild and wonderful as the beats it helps create. It all started when a group of music-loving mad scientists decided that the world of digital music creation needed a dose of sprunky chaos. Inspired by the success of Incredibox, they set out to create something even more outrageous.</p>
             <p>After months of mixing musical potions and conducting experiments with sound waves, Sprunki Incredibox was born. The team infused each character with a unique sprunky personality, ensuring that every beat created with Sprunki would be a one-of-a-kind auditory adventure.</p>
             <p>Since its launch, Sprunki Incredibox has taken the music creation world by storm, attracting sprunky souls from all corners of the globe. Today, it stands as a testament to the power of thinking outside the box – or should we say, thinking "sprunki-ly"!</p>
-        </div>
-    </section>
-
-    <section id="play-now" class="play-area">
-        <div class="container">
-            <h2>Play Sprunki Incredibox Now</h2>
-            <div class="game-container">
-                <iframe src="./game/" frameborder="0" width="100%" height="800px"></iframe>
-            </div>
         </div>
     </section>
 
@@ -495,7 +495,7 @@
 
     <section class="faq">
         <div class="container">
-            <h2>Frequently Asked Sprunki Questions</h2>
+            <h2>Frequently Asked Sprunky Questions</h2>
             <div class="faq-item">
                 <p class="faq-question">Q: What makes Sprunki Incredibox different from regular Incredibox?</p>
                 <p>A: Sprunki Incredibox takes the core concept of Incredibox and injects it with an extra dose of quirkiness and creativity. With Sprunki, you'll find more outrageous characters, zanier sounds, and an overall more sprunky experience!</p>
