--- a/download/index.html
+++ b/download/index.html
@@ -12,21 +12,21 @@
     <link rel="manifest" href="../site.webmanifest">
     <link rel="canonical" href="https://sprunkiincredibox.com/download/"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css?v=09281530">
 </head>
 <body>
     <header>
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="#"><i class="fas fa-music"></i> SprunkiIncredibox.com</a>
+                    <a href="../"><i class="fas fa-music"></i> SprunkiIncredibox.com</a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="https://sunoai.ai/welcome/sprunkiw" target="_blank"><i class="fas fa-music"></i> AI Music</a></li>
                     <li><a href="#play-now"><i class="fas fa-play"></i> Play Now</a></li>
-                    <li><a href="./download/"><i class="fas fa-download"></i> Download</a></li>
-                    <li><a href="#about"><i class="fas fa-info-circle"></i> About</a></li>
-                    <li><a href="#features"><i class="fas fa-star"></i> Features</a></li>
+                    <li><a href="./"><i class="fas fa-download"></i> Download</a></li>
+                    <li><a href="../#about"><i class="fas fa-info-circle"></i> About</a></li>
+                    <li><a href="../#features"><i class="fas fa-star"></i> Features</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
@@ -44,7 +44,7 @@
         </div>
     </section>
 
-    <section class="play-online">
+    <section class="play-online" id="play-now">
         <div class="container">
             <h2>Ready to Play Sprunki Incredibox?</h2>
             <p>You don't need to download Sprunki Incredibox. Click below to start making beats right away!</p>
@@ -125,6 +125,13 @@
         </div>
         <div class="container">
             <p><a href="https://github.com/qiayue/SprunkiIncredibox" style="color:white;">Sprunki Incredibox Github</a></p>
+        </div>
+        <div class="language-selector">
+            <p>Choose your language:</p>
+            <ul>
+                <li><a href="./" hreflang="en">English</a></li>
+                <li><a href="../ru/download/" hreflang="ru">Русский</a></li>
+            </ul>
         </div>
     </footer>
 
