--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="canonical" href="https://sprunkiincredibox.com/"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css?v=09281530">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1522458956946675"
      crossorigin="anonymous"></script>
 </head>
@@ -21,7 +21,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="#"><i class="fas fa-music"></i> SprunkiIncredibox.com</a>
+                    <a href="./"><i class="fas fa-music"></i> SprunkiIncredibox.com</a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="https://sunoai.ai/welcome/sprunkiw" target="_blank"><i class="fas fa-music"></i> AI Music</a></li>
@@ -273,6 +273,13 @@
         </div>
         <div class="container">
             <p><a href="https://github.com/qiayue/SprunkiIncredibox" style="color:white;">Sprunki Incredibox Github</a></p>
+        </div>
+        <div class="language-selector">
+            <p>Choose your language:</p>
+            <ul>
+                <li><a href="./" hreflang="en">English</a></li>
+                <li><a href="./ru/" hreflang="ru">Русский</a></li>
+            </ul>
         </div>
     </footer>
 
