--- a/ru/index.html
+++ b/ru/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="../site.webmanifest">
     <link rel="canonical" href="https://sprunkiincredibox.com/ru/"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css?v=09281530">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1522458956946675"
      crossorigin="anonymous"></script>
 </head>
@@ -21,12 +21,12 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="#"><i class="fas fa-music"></i> SprunkiIncredibox.com</a>
+                    <a href="./"><i class="fas fa-music"></i> SprunkiIncredibox.com</a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="https://sunoai.ai/welcome/sprunkiw" target="_blank"><i class="fas fa-music"></i> AI Музыка</a></li>
                     <li><a href="#play-now"><i class="fas fa-play"></i> Играть</a></li>
-                    <li><a href="../download/"><i class="fas fa-download"></i> Скачать</a></li>
+                    <li><a href="./download/"><i class="fas fa-download"></i> Скачать</a></li>
                     <li><a href="#about"><i class="fas fa-info-circle"></i> О нас</a></li>
                     <li><a href="#features"><i class="fas fa-star"></i> Особенности</a></li>
                 </ul>
@@ -271,6 +271,13 @@
         </div>
         <div class="container">
             <p><a href="https://github.com/qiayue/SprunkiIncredibox" style="color:white;">Sprunki Incredibox на GitHub</a></p>
+        </div>
+        <div class="language-selector">
+            <p>Выберите язык:</p>
+            <ul>
+                <li><a href="../" hreflang="en">English</a></li>
+                <li><a href="./" hreflang="ru">Русский</a></li>
+            </ul>
         </div>
     </footer>
 
