--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
             <ul>
                 <li><a href="./" hreflang="en">English</a></li>
                 <li><a href="./ru/" hreflang="ru">Русский</a></li>
+                <li><a href="./pt/" hreflang="pt">Português</a></li>
             </ul>
         </div>
     </footer>
