--- a/ru/index.html
+++ b/ru/index.html
@@ -42,7 +42,7 @@
     <section class="hero">
         <div class="hero-content container">
             <h1>Бесплатная игра Sprunki Incredibox</h1>
-            <h2 style="color:white;">Добро пожаловать на <a href="https://sprunkiincredibox.com/"  style="color:white;">SprunkiIncredibox.com</a> Играйте в музыкальную игру Sprunky</h2>
+            <h2 style="color:white;">Добро пожаловать на <a href="https://sprunkiincredibox.com/ru/"  style="color:white;">SprunkiIncredibox.com</a> Играйте в музыкальную игру Sprunky</h2>
             <p>Создавайте, микшируйте и наслаждайтесь самыми задорными ритмами!</p>
             <a href="#play-now" class="cta-button"><i class="fas fa-play"></i> Играть в Sprunki сейчас</a>
             <a href="https://sunoai.ai/welcome/sprunki" class="cta-button"><i class="fas fa-music"></i> Создать AI музыку бесплатно</a>
@@ -277,6 +277,7 @@
             <ul>
                 <li><a href="../" hreflang="en">English</a></li>
                 <li><a href="./" hreflang="ru">Русский</a></li>
+                <li><a href="../pt/" hreflang="pt">Português</a></li>
             </ul>
         </div>
     </footer>
