--- a/download/index.html
+++ b/download/index.html
@@ -131,6 +131,7 @@
             <ul>
                 <li><a href="./" hreflang="en">English</a></li>
                 <li><a href="../ru/download/" hreflang="ru">Русский</a></li>
+                <li><a href="../pt/download/" hreflang="pt">Português</a></li>
             </ul>
         </div>
     </footer>
