--- a/ru/download/index.html
+++ b/ru/download/index.html
@@ -48,7 +48,7 @@
         <div class="container">
             <h2>Готовы играть в Sprunki Incredibox?</h2>
             <p>Вам не нужно скачивать Sprunki Incredibox. Нажмите кнопку ниже, чтобы начать создавать биты прямо сейчас!</p>
-            <div class="game-container">
+            <div class="game-container" style="margin-top: 10px;">
                 <iframe src="../../game/" frameborder="0" width="100%" height="800px"></iframe>
             </div>
         </div>
@@ -126,6 +126,7 @@
             <ul>
                 <li><a href="../../download/" hreflang="en">English</a></li>
                 <li><a href="./" hreflang="ru">Русский</a></li>
+                <li><a href="../../pt/download/" hreflang="pt">Português</a></li>
             </ul>
         </div>
     </footer>
