--- a/download/index.html
+++ b/download/index.html
@@ -49,7 +49,7 @@
             <h2>Ready to Play Sprunki Incredibox?</h2>
             <p>You don't need to download Sprunki Incredibox. Click below to start making beats right away!</p>
             <div class="game-container">
-                <iframe src="../game/" frameborder="0" width="100%" height="800px"></iframe>
+                <iframe src="https://s.sprunkiincredibox.com/game/index.html" frameborder="0" width="100%" height="800px"></iframe>
             </div>
         </div>
     </section>
