--- a/pt/download/index.html
+++ b/pt/download/index.html
@@ -49,7 +49,7 @@
             <h2>Pronto para Sprunkar no Incredibox?</h2>
             <p>Você não precisa baixar o Sprunki Incredibox. Clique abaixo para começar a criar batidas agora mesmo!</p>
             <div class="game-container" style="margin-top: 10px;">
-                <iframe src="../../game/" frameborder="0" width="100%" height="800px"></iframe>
+                <iframe src="https://s.sprunkiincredibox.com/game/index.html" frameborder="0" width="100%" height="800px"></iframe>
             </div>
         </div>
     </section>
