--- a/pt/index.html
+++ b/pt/index.html
@@ -53,7 +53,7 @@
         <div class="container">
             <h2>Jogue Sprunki Incredibox Agora Mesmo!</h2>
             <div class="game-container">
-                <iframe src="../game/" frameborder="0" width="100%" height="800px"></iframe>
+                <iframe src="https://s.sprunkiincredibox.com/game/index.html" frameborder="0" width="100%" height="800px"></iframe>
             </div>
         </div>
     </section>
