--- a/pt/index.html
+++ b/pt/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprunki Incredibox - Crie Suas Batidas Malucas Online!</title>
     <meta name="description" content="Bem-vindo ao Sprunki Incredibox! Misture, crie e curta as batidas mais loucas do universo musical. Jogue grátis agora e liberte sua criatividade sonora!">    
-    <link rel="apple-touch-icon" sizes="180x180" href="../img/icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/icon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://s.sprunkiincredibox.com/img/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://s.sprunkiincredibox.com/img/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://s.sprunkiincredibox.com/img/icon/favicon-16x16.png">
     <link rel="icon" href="../favicon.ico"/>
     <link rel="manifest" href="../site.webmanifest">
     <link rel="canonical" href="https://sprunkiincredibox.com/pt/"/>
