--- a/ru/download/index.html
+++ b/ru/download/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprunki Incredibox Скачать - Играйте онлайн без загрузки</title>
     <meta name="description" content="Хотите скачать Sprunki Incredibox? Узнайте, почему наша онлайн-версия лучше любой загрузки. Играйте бесплатно прямо сейчас в браузере!">
-    <link rel="apple-touch-icon" sizes="180x180" href="../../img/icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../../img/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../../img/icon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://s.sprunkiincredibox.com/img/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://s.sprunkiincredibox.com/img/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://s.sprunkiincredibox.com/img/icon/favicon-16x16.png">
     <link rel="icon" href="../../favicon.ico"/>
     <link rel="manifest" href="../../site.webmanifest">
     <link rel="canonical" href="https://sprunkiincredibox.com/ru/download/"/>
