--- a/game/index.html
+++ b/game/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://sprunkiincredibox.com/">
+    <meta http-equiv="refresh" content="3;url=https://sprunkiincredibox.com/">
     <title>SprunkiIncredibox.com</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1522458956946675"
+     crossorigin="anonymous"></script>
 </head>
 <body>
-    <p>SprunkiIncredibox.com</p>
+    <p>Opening Sprunki Incredibox Music Game for you</p>
+    
+    <div style="display:none">
+        <script defer data-domain="sprunkiincredibox.com" src="https://click.pageview.click/js/script.js"></script>
+    </div>
 </body>
 </html>
