--- a/pt/download/index.html
+++ b/pt/download/index.html
@@ -46,10 +46,10 @@
 
     <section class="play-online">
         <div class="container">
-            <h2>Pronto para Sprunkar no Incredibox?</h2>
-            <p>Você não precisa baixar o Sprunki Incredibox. Clique abaixo para começar a criar batidas agora mesmo!</p>
+            <h2 style="color: white;">Pronto para Sprunkar no Incredibox?</h2>
+            <p style="color: white;">Você não precisa baixar o Sprunki Incredibox. Clique abaixo para começar a criar batidas agora mesmo!</p>
             <div class="game-container" style="margin-top: 10px;">
-                <iframe src="https://s.sprunkiincredibox.com/game/index.html" frameborder="0" width="100%" height="800px"></iframe>
+                <iframe src="https://s.sprunkiincredibox.com/game/sprunki/index.html" frameborder="0" width="100%" height="800px"></iframe>
             </div>
         </div>
     </section>
