--- a/ru/index.html
+++ b/ru/index.html
@@ -53,7 +53,7 @@
         <div class="container">
             <h2>Играйте в Sprunki Incredibox прямо сейчас</h2>
             <div class="game-container">
-                <iframe src="https://s.sprunkiincredibox.com/game/index.html" frameborder="0" width="100%" height="800px"></iframe>
+                <iframe src="https://s.sprunkiincredibox.com/game/sprunki/index.html" frameborder="0" width="100%" height="800px"></iframe>
             </div>
         </div>
     </section>
