--- a/download/index.html
+++ b/download/index.html
@@ -46,10 +46,10 @@
 
     <section class="play-online" id="play-now">
         <div class="container">
-            <h2>Ready to Play Sprunki Incredibox?</h2>
-            <p>You don't need to download Sprunki Incredibox. Click below to start making beats right away!</p>
+            <h2 style="color: white;">Ready to Play Sprunki Incredibox?</h2>
+            <p style="color: white;">You don't need to download Sprunki Incredibox. Click below to start making beats right away!</p>
             <div class="game-container">
-                <iframe src="https://s.sprunkiincredibox.com/game/index.html" frameborder="0" width="100%" height="800px"></iframe>
+                <iframe src="https://s.sprunkiincredibox.com/game/sprunki/index.html" frameborder="0" width="100%" height="800px"></iframe>
             </div>
         </div>
     </section>
