--- a/ru/download/index.html
+++ b/ru/download/index.html
@@ -46,10 +46,10 @@
 
     <section class="play-online" id="play-now">
         <div class="container">
-            <h2>Готовы играть в Sprunki Incredibox?</h2>
-            <p>Вам не нужно скачивать Sprunki Incredibox. Нажмите кнопку ниже, чтобы начать создавать биты прямо сейчас!</p>
+            <h2 style="color: white;">Готовы играть в Sprunki Incredibox?</h2>
+            <p style="color: white;">Вам не нужно скачивать Sprunki Incredibox. Нажмите кнопку ниже, чтобы начать создавать биты прямо сейчас!</p>
             <div class="game-container" style="margin-top: 10px;">
-                <iframe src="https://s.sprunkiincredibox.com/game/index.html" frameborder="0" width="100%" height="800px"></iframe>
+                <iframe src="https://s.sprunkiincredibox.com/game/sprunki/index.html" frameborder="0" width="100%" height="800px"></iframe>
             </div>
         </div>
     </section>
