--- a/download/index.html
+++ b/download/index.html
@@ -130,6 +130,7 @@
             <p>Choose your language:</p>
             <ul>
                 <li><a href="./" hreflang="en">English</a></li>
+                <li><a href="../ko/download/" hreflang="ko">한국어</a></li>
                 <li><a href="../ru/download/" hreflang="ru">Русский</a></li>
                 <li><a href="../pt/download/" hreflang="pt">Português</a></li>
             </ul>
