--- a/pt/download/index.html
+++ b/pt/download/index.html
@@ -130,6 +130,7 @@
             <span>Escolha seu idioma:</span>
             <ul>
                 <li><a href="../../download/" hreflang="en">English</a></li>
+                <li><a href="../../ko/download/" hreflang="ko">한국어</a></li>
                 <li><a href="../../ru/download/" hreflang="ru">Русский</a></li>
                 <li><a href="./" hreflang="pt">Português</a></li>
             </ul>
