--- a/pt/index.html
+++ b/pt/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprunki Incredibox - Crie Suas Batidas Malucas Online!</title>
-    <meta name="description" content="Bem-vindo ao Sprunki Incredibox! Misture, crie e curta as batidas mais loucas do universo musical. Jogue grátis agora e liberte sua criatividade sonora!">    
+    <meta name="description" content="Bem-vindo ao Sprunki Incredibox! Misture, crie e curta as batidas mais loucas do universo musical. Jogue grátis agora e liberte sua criatividade sonora!">
     <link rel="apple-touch-icon" sizes="180x180" href="https://s.sprunkiincredibox.com/img/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://s.sprunkiincredibox.com/img/icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://s.sprunkiincredibox.com/img/icon/favicon-16x16.png">
@@ -266,6 +266,7 @@
             <span>Escolha seu idioma:</span>
             <ul>
                 <li><a href="../" hreflang="en">English</a></li>
+                <li><a href="../ko/" hreflang="ko">한국어</a></li>
                 <li><a href="../ru/" hreflang="ru">Русский</a></li>
                 <li><a href="./" hreflang="pt">Português</a></li>
             </ul>
