--- a/ru/download/index.html
+++ b/ru/download/index.html
@@ -125,6 +125,7 @@
             <p>Выберите язык:</p>
             <ul>
                 <li><a href="../../download/" hreflang="en">English</a></li>
+                <li><a href="../../ko/download/" hreflang="ko">한국어</a></li>
                 <li><a href="./" hreflang="ru">Русский</a></li>
                 <li><a href="../../pt/download/" hreflang="pt">Português</a></li>
             </ul>
