--- a/game/index.html
+++ b/game/index.html
@@ -8,7 +8,7 @@
      crossorigin="anonymous"></script>
 </head>
 <body>
-    <p>Opening Sprunki Incredibox Music Game for you</p>
+    <div style="margin: 30px auto;">Opening Sprunki Incredibox Music Game for you</div>
     
     <div style="display:none">
         <script defer data-domain="sprunkiincredibox.com" src="https://click.pageview.click/js/script.js"></script>
