--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
             <p>Choose your language:</p>
             <ul>
                 <li><a href="./" hreflang="en">English</a></li>
+                <li><a href="./ko/" hreflang="ko">한국어</a></li>
                 <li><a href="./ru/" hreflang="ru">Русский</a></li>
                 <li><a href="./pt/" hreflang="pt">Português</a></li>
             </ul>
