--- a/ru/index.html
+++ b/ru/index.html
@@ -276,6 +276,7 @@
             <p>Выберите язык:</p>
             <ul>
                 <li><a href="../" hreflang="en">English</a></li>
+                <li><a href="../ko/" hreflang="ko">한국어</a></li>
                 <li><a href="./" hreflang="ru">Русский</a></li>
                 <li><a href="../pt/" hreflang="pt">Português</a></li>
             </ul>
