--- a/index.html
+++ b/index.html
@@ -15,6 +15,52 @@
     <link rel="stylesheet" href="./style.css?v=09301430">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1522458956946675"
      crossorigin="anonymous"></script>
+    <style type="text/css">
+        .related-games {
+            background-color: #f5f5f5;
+            padding: 50px 0;
+        }
+
+        .game-card-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        .game-card {
+            background-color: #ffffff;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .game-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+        }
+
+        .game-card img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+        }
+
+        .game-card h3 {
+            padding: 15px 15px 5px;
+            font-size: 1.2em;
+            margin: 0;
+        }
+
+        .game-card p {
+            padding: 0 15px 15px;
+            font-size: 0.9em;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -54,6 +100,25 @@
             <h2>Play Sprunki Incredibox Now</h2>
             <div class="game-container">
                 <iframe src="https://s.sprunkiincredibox.com/game/sprunki/index.html" frameborder="0" width="100%" height="800px"></iframe>
+            </div>
+        </div>
+    </section>
+
+    <section id="related-games" class="related-games">
+        <div class="container">
+            <h2>Explore More Musical Adventures</h2>
+            <p>Discover other exciting music creation games in the Incredibox universe!</p>
+            <div class="game-card-grid">
+                <a href="./" class="game-card">
+                    <img src="https://s.sprunkiincredibox.com/img/sprunki.png" alt="Sprunki Incredibox">
+                    <h3>Sprunki Incredibox</h3>
+                    <p>Create spunky beats with quirky characters!</p>
+                </a>
+                <a href="./neesterversal-v3-incredibox" class="game-card">
+                    <img src="https://s.sprunkiincredibox.com/img/neesterversal.png" alt="Classic Incredibox">
+                    <h3>Neesterversal v3 Incredibox</h3>
+                    <p>A Musical Journey with 20 Unique Neesters!</p>
+                </a>
             </div>
         </div>
     </section>
