--- a/neesterversal-v3-incredibox/index.html
+++ b/neesterversal-v3-incredibox/index.html
@@ -13,6 +13,52 @@
     <link rel="canonical" href="https://sprunkiincredibox.com/download/"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../style.css?v=09301430">
+    <style type="text/css">
+        .related-games {
+            background-color: #f5f5f5;
+            padding: 50px 0;
+        }
+
+        .game-card-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        .game-card {
+            background-color: #ffffff;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .game-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+        }
+
+        .game-card img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+        }
+
+        .game-card h3 {
+            padding: 15px 15px 5px;
+            font-size: 1.2em;
+            margin: 0;
+        }
+
+        .game-card p {
+            padding: 0 15px 15px;
+            font-size: 0.9em;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -55,15 +101,34 @@
         </div>
     </section>
 
+    <section id="related-games" class="related-games">
+        <div class="container">
+            <h2>Explore More Musical Adventures</h2>
+            <p>Discover other exciting music creation games in the Incredibox universe!</p>
+            <div class="game-card-grid">
+                <a href="../" class="game-card">
+                    <img src="https://s.sprunkiincredibox.com/img/sprunki.png" alt="Sprunki Incredibox">
+                    <h3>Sprunki Incredibox</h3>
+                    <p>Create spunky beats with quirky characters!</p>
+                </a>
+                <a href="./" class="game-card">
+                    <img src="https://s.sprunkiincredibox.com/img/neesterversal.png" alt="Classic Incredibox">
+                    <h3>Neesterversal v3 Incredibox</h3>
+                    <p>A Musical Journey with 20 Unique Neesters!</p>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <section id="about" class="about-neesterversal">
         <div class="container">
             <h2>About Neesterversal v3 Incredibox</h2>
             <p>Neesterversal v3 is a special mode that expands the world of Incredibox. It features 20 different Neester characters, each with their own unique sounds and styles.</p>
             <h3>How to Play:</h3>
-            <ul>
-                <li>Use headphones for a better experience!</li>
-                <li>Drag and drop an icon on a character to have them sing.</li>
-                <li>Drag down a character to have them stop singing.</li>
+            <ul class="step-grid" style="list-style: none;">
+                <li class="step-item">Use headphones for a better experience!</li>
+                <li class="step-item">Drag and drop an icon on a character to have them sing.</li>
+                <li class="step-item">Drag down a character to have them stop singing.</li>
             </ul>
             <p>Welcome to the third edition of the Neesterversal, featuring 20 different Neesters from 20 different mods! There's some lore hidden in the game too, feel free to explore it!</p>
         </div>
@@ -158,7 +223,7 @@
             <h2>Meet the Creators</h2>
             <p>Neesterversal v3 is a collaborative effort by many talented creators:</p>
             <h3>Beats:</h3>
-            <ul class="step-item">
+            <ul class="step-item" style="list-style: none;">
                 <li>Beat 1 - <strong>@NyankoBfLol</strong> (character template)</li>
                 <li>Beat 2 - <strong>@22EI01</strong> [<strong>@Youxe</strong> template]</li>
                 <li>Beat 3 - <strong>@BoowompSponge</strong></li>
@@ -166,7 +231,7 @@
                 <li>Beat 5 - <strong>@Aceofspades_Official</strong></li>
             </ul>
             <h3>Effects:</h3>
-            <ul class="step-item">
+            <ul class="step-item" style="list-style: none;">
                 <li>Effect 1 - <strong>@freepies</strong></li>
                 <li>Effect 2 - <strong>@greenvrgt</strong></li>
                 <li>Effect 3 - <strong>@DylanXD609</strong></li>
@@ -174,7 +239,7 @@
                 <li>Effect 5 - <strong>@-Eggfinite-</strong></li>
             </ul>
             <h3>Melodies:</h3>
-            <ul class="step-item">
+            <ul class="step-item" style="list-style: none;">
                 <li>Melody 1 - <strong>@AKALuke04</strong></li>
                 <li>Melody 2 - <strong>@JO_AYO</strong></li>
                 <li>Melody 3 - <strong>@freepies</strong></li>
@@ -182,7 +247,7 @@
                 <li>Melody 5 - <strong>@JJCATKILL</strong></li>
             </ul>
             <h3>Voices:</h3>
-            <ul class="step-item">
+            <ul class="step-item" style="list-style: none;">
                 <li>Voice 1 - <strong>@EricEpicGamer445</strong></li>
                 <li>Voice 2 - <strong>@TeaWix</strong></li>
                 <li>Voice 3 - <strong>@freepies</strong></li>
