--- a/neesterversal-v3-incredibox/index.html
+++ b/neesterversal-v3-incredibox/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="https://s.sprunkiincredibox.com/img/icon/favicon-16x16.png">
     <link rel="icon" href="../favicon.ico"/>
     <link rel="manifest" href="../site.webmanifest">
-    <link rel="canonical" href="https://sprunkiincredibox.com/download/"/>
+    <link rel="canonical" href="https://sprunkiincredibox.com/neesterversal-v3-incredibox/"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../style.css?v=09301430">
     <style type="text/css">
