--- a/neesterversal-v3-incredibox/index.html
+++ b/neesterversal-v3-incredibox/index.html
@@ -13,6 +13,8 @@
     <link rel="canonical" href="https://sprunkiincredibox.com/neesterversal-v3-incredibox/"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../style.css?v=09301430">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1522458956946675"
+     crossorigin="anonymous"></script>
     <style type="text/css">
         .related-games {
             background-color: #f5f5f5;
