--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
                     <img src="https://s.sprunkiincredibox.com/img/neesterversal.png" alt="Classic Incredibox">
                     <h3>Neesterversal v3 Incredibox</h3>
                     <p>A Musical Journey with 20 Unique Neesters!</p>
+                </a>         
+                <a href="./gray-sprunki/" class="game-card">
+                    <img src="https://s.sprunkiincredibox.com/img/gray-sprunki.png" alt="Classic Incredibox">
+                    <h3>Gray Sprunki Incredibox</h3>
+                    <p>The Cool Cat of Incredibox Universe</p>
                 </a>
             </div>
         </div>
