--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprunki Incredibox - Create Your Own Sprunky Beats! | SprunkiIncredibox.com</title>
-    <meta name="description" content="Dive into the world of Sprunki Incredibox! Mix, match, and create unique Sprunky beats with our quirky characters. Experience music creation like never before.">
+    <title>Sprunky: Sprunki Incredibox - Create Your Own Sprunky Beats! | SprunkiIncredibox.com</title>
+    <meta name="description" content="Dive into the world of Sprunky, Play Sprunki Incredibox! Mix, match, and create unique Sprunky beats with our quirky characters. Experience music creation like never before.">
     <link rel="apple-touch-icon" sizes="180x180" href="https://s.sprunkiincredibox.com/img/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://s.sprunkiincredibox.com/img/icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://s.sprunkiincredibox.com/img/icon/favicon-16x16.png">
@@ -70,10 +70,10 @@
                     <a href="./"><i class="fas fa-music"></i> SprunkiIncredibox.com</a>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="#play-now"><i class="fas fa-play"></i> Play Now</a></li>
+                    <li><a href="#play-now" title="Play Sprunki"><i class="fas fa-play"></i> Sprunki</a></li>
                     <li><a href="./download/"><i class="fas fa-download"></i> Download</a></li>
-                    <li><a href="#about"><i class="fas fa-info-circle"></i> About</a></li>
-                    <li><a href="#features"><i class="fas fa-star"></i> Features</a></li>
+                    <li><a href="./neesterversal-v3-incredibox/" title="Play Neesterversal"><i class="fas fa-play"></i> Neesterversal V3</a></li>
+                    <li><a href="./gray-sprunki/" title="Play Gray Sprunki"><i class="fas fa-play"></i> Gray Sprunki</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
@@ -86,7 +86,7 @@
 
     <section class="hero">
         <div class="hero-content container">
-            <h1>Free Sprunki Incredibox Game</h1>
+            <h1>Free Sprunky Online, Play Sprunki Incredibox Game</h1>
             <h2 style="color:white;">Welcome to <a href="https://sprunkiincredibox.com/"  style="color:white;">SprunkiIncredibox.com</a> Play Sprunky Music Game</h2>
             <p>Create, mix, and groove with the spunkiest beats around!</p>
             <a href="#play-now" class="cta-button"><i class="fas fa-play"></i> Play Sprunki Now</a>
