1，优化手机端显示 2，优化pc端显示 3，增加oc页面 4，增加characters页面

--- a/neesterversal-v3-incredibox/index.html
+++ b/neesterversal-v3-incredibox/index.html
@@ -72,8 +72,11 @@
                 <ul class="nav-links">
                     <li><a href="../#play-now"><i class="fas fa-play"></i> Play Sprunki</a></li>
                     <li><a href="./#play-neesterversal"><i class="fas fa-play"></i> Play Neesterversal</a></li>
+                    <li><a href="../gray-sprunki/"><i class="fas fa-play"></i> Gray Sprunki</a></li>
+                    <li><a href="../sprunki-oc/"><i class="fas fa-play"></i> Sprunki OC</a></li>
+                    <li><a href="../sprunki-characters/"><i class="fas fa-users"></i> Characters</a></li>
                     <li><a href="#about"><i class="fas fa-info-circle"></i> About</a></li>
-                    <li><a href="#characters"><i class="fas fa-users"></i> Characters</a></li>
+                    <li><a href="#characters"><i class="fas fa-users"></i> Neesters</a></li>
                     <li><a href="#creators"><i class="fas fa-star"></i> Creators</a></li>
                 </ul>
                 <div class="burger">
