--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="canonical" href="https://sprunkiincredibox.com/"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="./tailwind.js"></script>
     <link rel="stylesheet" href="./style.css?v=09301430">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1522458956946675"
      crossorigin="anonymous"></script>
@@ -67,13 +68,15 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="./"><i class="fas fa-music"></i> SprunkiIncredibox.com</a>
+                    <a href="./" class="flex center items-center"><i class="fas mr-2 fa-music hidden sm:block"></i> SprunkiIncredibox.com</a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#play-now" title="Play Sprunki"><i class="fas fa-play"></i> Sprunki</a></li>
                     <li><a href="./download/"><i class="fas fa-download"></i> Download</a></li>
                     <li><a href="./neesterversal-v3-incredibox/" title="Play Neesterversal"><i class="fas fa-play"></i> Neesterversal V3</a></li>
                     <li><a href="./gray-sprunki/" title="Play Gray Sprunki"><i class="fas fa-play"></i> Gray Sprunki</a></li>
+                    <li><a href="./sprunki-oc/" title="Play Sprunki OC"><i class="fas fa-play"></i> Sprunki OC</a></li>
+                    <li><a href="./sprunki-characters/" title="Sprunki Characters"><i class="fas fa-users"></i> Characters</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
@@ -84,7 +87,7 @@
         </div>
     </header>
 
-    <section class="hero">
+    <section class="hero mt-[70px] ">
         <div class="hero-content container">
             <h1>Free Sprunky Online, Play Sprunki Incredibox Game</h1>
             <h2 style="color:white;">Welcome to <a href="https://sprunkiincredibox.com/"  style="color:white;">SprunkiIncredibox.com</a> Play Sprunky Music Game</h2>
@@ -97,7 +100,10 @@
         <div class="container">
             <h2>Play Sprunki Incredibox Now</h2>
             <div class="game-container">
-                <iframe src="https://s.sprunkiincredibox.com/game/sprunki/index.html" frameborder="0" width="100%" height="800px"></iframe>
+                <button id="fullscreen-btn" class="fullscreen-button">
+                    <i class="fas fa-expand"></i> Fullscreen
+                </button>
+                <iframe id="game-iframe" src="https://s.sprunkiincredibox.com/game/sprunki/index.html" frameborder="0" width="100%" height="800px"></iframe>
             </div>
         </div>
     </section>
@@ -121,6 +127,16 @@
                     <img src="https://s.sprunkiincredibox.com/img/gray-sprunki.png" alt="Classic Incredibox">
                     <h3>Gray Sprunki Incredibox</h3>
                     <p>The Cool Cat of Incredibox Universe</p>
+                </a>
+                <a href="./sprunki-oc/" class="game-card">
+                    <img src="./img/sprunki-oc.png" alt="Sprunki OC">
+                    <h3>Sprunki OC</h3>
+                    <p>Create music with original characters!</p>
+                </a>
+                <a href="./sprunki-characters/" class="game-card">
+                    <img src="./img/sprunki-characters.png" alt="Sprunki Characters">
+                    <h3>Sprunki Characters</h3>
+                    <p>Meet the quirky cast of Sprunki Incredibox!</p>
                 </a>
             </div>
         </div>
@@ -375,6 +391,22 @@
         }
 
         navSlide();
+
+        // 添加全屏功能
+        const fullscreenBtn = document.getElementById('fullscreen-btn');
+        const gameIframe = document.getElementById('game-iframe');
+
+        fullscreenBtn.addEventListener('click', () => {
+            if (gameIframe.requestFullscreen) {
+                gameIframe.requestFullscreen();
+            } else if (gameIframe.mozRequestFullScreen) { // Firefox
+                gameIframe.mozRequestFullScreen();
+            } else if (gameIframe.webkitRequestFullscreen) { // Chrome, Safari 和 Opera
+                gameIframe.webkitRequestFullscreen();
+            } else if (gameIframe.msRequestFullscreen) { // IE/Edge
+                gameIframe.msRequestFullscreen();
+            }
+        });
     </script>
     <div style="display:none">
         <script defer data-domain="sprunkiincredibox.com" src="https://click.pageview.click/js/script.js"></script>
