--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="./" class="flex center items-center"><i class="fas mr-2 fa-music hidden sm:block"></i> SprunkiIncredibox.com</a>
+                    <a href="./" class="flex center items-center"><i class="fas mr-2 fa-music hidden sm:block"></i> Sprunki Incredibox
                 </div>
                 <ul class="nav-links">
                     <li><a href="#play-now" title="Play Sprunki"><i class="fas fa-play"></i> Sprunki</a></li>
@@ -90,7 +90,7 @@
     <section class="hero mt-[70px] ">
         <div class="hero-content container">
             <h1>Free Sprunky Online, Play Sprunki Incredibox Game</h1>
-            <h2 style="color:white;">Welcome to <a href="https://sprunkiincredibox.com/"  style="color:white;">SprunkiIncredibox.com</a> Play Sprunky Music Game</h2>
+            <h2 style="color:white;">Welcome to <a href="https://sprunkiincredibox.com/"  style="color:white;">Sprunki Incredibox Play Sprunky Music Game</h2>
             <p>Create, mix, and groove with the spunkiest beats around!</p>
             <a href="#play-now" class="cta-button"><i class="fas fa-play"></i> Play Sprunki Now</a>
         </div>
