--- a/ko/index.html
+++ b/ko/index.html
@@ -43,7 +43,7 @@
     <section class="hero">
         <div class="hero-content container">
             <h1>스프런키 인크레디박스: 웹에서 즐기는 가장 독특한 음악 게임!</h1>
-            <h2 style="color:white;"><a href="https://sprunkiincredibox.com/" style="color:white;">SprunkiIncredibox.com</a>에 오신 것을 환영합니다 - 음악과 재미가 만나는 곳!</h2>
+            <h2 style="color:white;"><a href="https://sprunkiincredibox.com/" style="color:white;">Sprunki Incredibox에 오신 것을 환영합니다 - 음악과 재미가 만나는 곳!</h2>
             <p>귀여운 캐릭터들과 함께 우주에서 가장 신나는 비트를 만들고, 믹스하고, 즐겨보세요!</p>
             <a href="#play-now" class="cta-button"><i class="fas fa-play"></i> 지금 스프런키 시작하기!</a>
             <a href="https://sunoai.ai/welcome/sprunki" class="cta-button"><i class="fas fa-music"></i> AI로 무료 음악 만들기</a>
