--- a/neesterversal-v3-incredibox/index.html
+++ b/neesterversal-v3-incredibox/index.html
@@ -67,7 +67,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="../"><i class="fas fa-music"></i> SprunkiIncredibox.com</a>
+                    <a href="../"><i class="fas fa-music"></i> Sprunki Incredibox
                 </div>
                 <ul class="nav-links">
                     <li><a href="../#play-now"><i class="fas fa-play"></i> Play Sprunki</a></li>
