--- a/pt/download/index.html
+++ b/pt/download/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="../"><i class="fas fa-music"></i> SprunkiIncredibox.com</a>
+                    <a href="../"><i class="fas fa-music"></i> Sprunki Incredibox
                 </div>
                 <ul class="nav-links">
                     <li><a href="https://sunoai.ai/welcome/sprunkiw" target="_blank"><i class="fas fa-music"></i> AI Музыка</a></li>
