--- a/pt/index.html
+++ b/pt/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="#"><i class="fas fa-music"></i> SprunkiIncredibox.com</a>
+                    <a href="#"><i class="fas fa-music"></i> Sprunki Incredibox
                 </div>
                 <ul class="nav-links">
                     <li><a href="https://sunoai.ai/welcome/sprunkiw" target="_blank"><i class="fas fa-music"></i> Música IA</a></li>
@@ -42,7 +42,7 @@
     <section class="hero">
         <div class="hero-content container">
             <h1>Sprunki Incredibox: O Jogo Musical Mais Louco da Web!</h1>
-            <h2 style="color: white;">Bem-vindo ao <a href="https://sprunkiincredibox.com/pt/" style="color: white;">SprunkiIncredibox.com</a> - Onde a Música Encontra a Diversão!</h2>
+            <h2 style="color: white;">Bem-vindo ao <a href="https://sprunkiincredibox.com/pt/" style="color: white;">Sprunki Incredibox - Onde a Música Encontra a Diversão!</h2>
             <p>Crie, misture e balance com as batidas mais malucas do universo!</p>
             <a href="#jogar-agora" class="cta-button"><i class="fas fa-play"></i> Comece a Sprunkar Agora!</a>
             <a href="https://sunoai.ai/welcome/sprunki" class="cta-button"><i class="fas fa-music"></i> Crie Música com IA Gratuitamente</a>
