--- a/ru/index.html
+++ b/ru/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="./" class="flex center items-center"><i class="fas mr-2 fa-music hidden sm:block"></i> SprunkiIncredibox.com</a>
+                    <a href="./" class="flex center items-center"><i class="fas mr-2 fa-music hidden sm:block"></i> Sprunki Incredibox
                 </div>
                 <ul class="nav-links">
                     <li><a href="https://sunoai.ai/welcome/sprunkiw" target="_blank"><i class="fas fa-music"></i> AI Музыка</a></li>
@@ -44,7 +44,7 @@
     <section class="hero">
         <div class="hero-content container">
             <h1>Бесплатная игра Sprunki Incredibox</h1>
-            <h2 style="color:white;">Добро пожаловать на <a href="https://sprunkiincredibox.com/ru/"  style="color:white;">SprunkiIncredibox.com</a> Играйте в музыкальную игру Sprunky</h2>
+            <h2 style="color:white;">Добро пожаловать на <a href="https://sprunkiincredibox.com/ru/"  style="color:white;">Sprunki Incredibox Играйте в музыкальную игру Sprunky</h2>
             <p>Создавайте, микшируйте и наслаждайтесь самыми задорными ритмами!</p>
             <a href="#play-now" class="cta-button"><i class="fas fa-play"></i> Играть в Sprunki сейчас</a>
             <a href="https://sunoai.ai/welcome/sprunki" class="cta-button"><i class="fas fa-music"></i> Создать AI музыку бесплатно</a>
