--- a/sprunki-characters/index.html
+++ b/sprunki-characters/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="../" class="flex center items-center"><i class="fas mr-2 fa-music hidden sm:block"></i> SprunkiIncredibox.com</a>
+                    <a href="../" class="flex center items-center"><i class="fas mr-2 fa-music hidden sm:block"></i> Sprunki Incredibox
                 </div>
                 <ul class="nav-links">
                     <li><a href="#play-now" title="Play Sprunki"><i class="fas fa-play"></i> Sprunki</a></li>
