修改顶部导航

--- a/sprunki-oc/index.html
+++ b/sprunki-oc/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="#play-now" title="Play Sprunki OC"><i class="fas fa-play"></i> Sprunki OC</a></li>
-                    <li><a href="../download/"><i class="fas fa-download"></i> Download</a></li>
+                    <li><a href="../sprunki-characters/"><i class="fas fa-play"></i> characters</a></li>
                     <li><a href="../neesterversal-v3-incredibox/" title="Play Neesterversal"><i class="fas fa-play"></i>
                             Neesterversal V3</a></li>
                     <li><a href="../gray-sprunki/" title="Play Gray Sprunki"><i class="fas fa-play"></i> Gray Sprunki</a></li>
