--- a/sprunki-characters/index.html
+++ b/sprunki-characters/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="#play-now" title="Play Sprunki"><i class="fas fa-play"></i> Sprunki</a></li>
-                    <li><a href="../download/"><i class="fas fa-download"></i> Download</a></li>
+                    <li><a href="../sprunki-oc/"><i class="fas fa-download"></i> sprunki-oc</a></。li>
                     <li><a href="../neesterversal-v3-incredibox/" title="Play Neesterversal"><i class="fas fa-play"></i> Neesterversal V3</a></li>
                     <li><a href="../gray-sprunki/" title="Play Gray Sprunki"><i class="fas fa-play"></i> Gray Sprunki</a></li>
                     <li><a href="../sprunki-oc/" title="Play Sprunki OC"><i class="fas fa-play"></i> Sprunki OC</a></li>
