--- a/sprunki-oc/index.html
+++ b/sprunki-oc/index.html
@@ -81,7 +81,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="./" class="flex center items-center"><i class="fas mr-2 fa-music hidden sm:block"></i> Sprunki Incredibox
+                    <a href="../" class="flex center items-center"><i class="fas mr-2 fa-music hidden sm:block"></i> Sprunki Incredibox
                 </div>
                 <ul class="nav-links">
                     <li><a href="#play-now" title="Play Sprunki OC"><i class="fas fa-play"></i> Sprunki OC</a></li>
