--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprunky: Sprunki Incredibox - Create Your Own Sprunky Beats! | SprunkiIncredibox.com</title>
+    <title>Sprunki Incredibox: Sprunki Game Online, Create Sprunky Beats Free</title>
     <meta name="description" content="Dive into the world of Sprunky, Play Sprunki Incredibox! Mix, match, and create unique Sprunky beats with our quirky characters. Experience music creation like never before.">
     <link rel="apple-touch-icon" sizes="180x180" href="https://s.sprunkiincredibox.com/img/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://s.sprunkiincredibox.com/img/icon/favicon-32x32.png">
