--- a/neesterversal-v3-incredibox/index.html
+++ b/neesterversal-v3-incredibox/index.html
@@ -331,6 +331,15 @@
     </script>
 
     <div style="display:none">
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-2XQY73C38G"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-2XQY73C38G');
+        </script>
         <script defer data-domain="sprunkiincredibox.com" src="https://click.pageview.click/js/script.js"></script>
     </div>
 </body>
